#
# This file is protected by Copyright. Please refer to the COPYRIGHT file 
# distributed with this source distribution.
# 
# This file is part of GNUHAWK.
# 
# GNUHAWK is free software: you can redistribute it and/or modify is under the 
# terms of the GNU General Public License as published by the Free Software 
# Foundation, either version 3 of the License, or (at your option) any later 
# version.
# 
# GNUHAWK is distributed in the hope that it will be useful, but WITHOUT ANY 
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR 
# A PARTICULAR PURPOSE.  See the GNU General Public License for more details.

# You should have received a copy of the GNU General Public License along with 
# this program.  If not, see http://www.gnu.org/licenses/.
#
 
if COMPONENTS
   SUBDIRS = add_cc_2i/cpp \
          add_const_ff/cpp \
          add_const_ii/cpp \
          add_const_sf/cpp \
          add_const_ss/cpp \
          add_const_vff/cpp \
          add_const_vii/cpp \
          add_const_vss/cpp \
          add_ff_2i/cpp \
          add_ii_2i/cpp \
          add_ss_2i/cpp \
          agc2_cc/cpp \
          agc2_ff/cpp \
          agc_cc/cpp \
          agc_ff/cpp \
          and_bb_2i/cpp \
          and_const_bb/cpp \
          and_ii_2i/cpp \
          and_ss_2i/cpp \
          complex_to_arg/cpp \
          complex_to_float_1o/cpp \
          complex_to_float_2o/cpp \
          complex_to_imag/cpp \
          complex_to_mag/cpp \
          complex_to_mag_squared/cpp \
          complex_to_real/cpp \
          dc_blocker_cc/cpp \
          dc_blocker_ff/cpp \
          feedforward_agc_cc/cpp \
          fft_filter_fff/cpp \
          fft_vcc/cpp \
          fft_vfc/cpp \
          filter_delay_fc_1i/cpp \
          filter_delay_fc_2i/cpp \
          fir_filter_ccf/cpp \
          fir_filter_fff/cpp \
          fir_filter_fsf/cpp \
          fll_band_edge_cc_4o/cpp \
          fractional_interpolator_cc/cpp \
          fractional_interpolator_ff/cpp \
          glfsr_source_f/cpp \
          goertzel_fc/cpp \
          hilbert_fc/cpp \
          iir_filter_ffd/cpp \
          integrate_cc/cpp \
          integrate_ff/cpp \
          integrate_ii/cpp \
          integrate_ss/cpp \
          interp_fir_filter_ccf/cpp \
          interp_fir_filter_fff/cpp \
          int_to_float/cpp \
          multiply_cc_2i/cpp \
          multiply_const_ff/cpp \
          multiply_const_ii/cpp \
          multiply_const_ss/cpp \
          multiply_const_vff/cpp \
          multiply_const_vii/cpp \
          multiply_const_vss/cpp \
          multiply_ff_2i/cpp \
          multiply_ii_2i/cpp \
          multiply_ss_2i/cpp \
          noise_source_c/cpp \
          noise_source_f/cpp \
          noise_source_i/cpp \
          noise_source_s/cpp \
          pfb_arb_resampler_ccf/cpp \
          pfb_arb_resampler_fff/cpp \
          pfb_clock_sync_ccf_4o/cpp \
          phase_modulator_fc/cpp \
          psk_demod_cb/cpp \
          quadrature_demod_cf/cpp \
          short_to_float/cpp \
          sig_source_f/cpp \
          sig_source_i/cpp \
          single_pole_iir_filter_cc/cpp \
          single_pole_iir_filter_ff/cpp \
          unpack_k_bits_bb/cpp \
          vector_sink_b/cpp \
          vector_sink_f/cpp \
          vector_sink_i/cpp \
          vector_sink_s/cpp \
          vector_source_b/cpp \
          vector_source_f/cpp \
          vector_source_i/cpp \
          vector_source_s/cpp
endif

distclean-am: clean-am distclean-generic distclean-tags
	find . -name "configure.gnu" | xargs rm -f
