#
# This file is protected by Copyright. Please refer to the COPYRIGHT file 
# distributed with this source distribution.
# 
# This file is part of GNUHAWK.
# 
# GNUHAWK is free software: you can redistribute it and/or modify is under the 
# terms of the GNU General Public License as published by the Free Software 
# Foundation, either version 3 of the License, or (at your option) any later 
# version.
# 
# GNUHAWK is distributed in the hope that it will be useful, but WITHOUT ANY 
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR 
# A PARTICULAR PURPOSE.  See the GNU General Public License for more details.

# You should have received a copy of the GNU General Public License along with 
# this program.  If not, see http://www.gnu.org/licenses/.
#
 
nobase_pkginclude_HEADERS = gnuhawk.h \
                     gr_component.h \
                     gr_properties.h \
                     gr_basic_block.h \
                     gr_block_detail.h \
                     gr_block.h \
                     gr_malloc.h \
                     gnuhawk_block_bases.h \
                     gr_msg_accepter.h \
                     runtime/gr_message.h runtime/gr_msg_queue.h runtime/gr_msg_handler.h \
                     gruel/msg_accepter.h  \
                     gruel/msg_passing.h \
                     gruel/pmt.h \
                     gruel/pmt_int.h

SUBDIRS = 

include filter_includes.am
include general_includes.am
include gengen_includes.am
include gr-atsc_includes.am
include gr-audio_includes.am
include gr-audio_alsa_includes.am
include gr-digital_includes.am
include gr-fcd_includes.am
include gr-fft_includes.am
include gr-filter_includes.am
include gr-filter_filter_includes.am
include gr-howto-write-a-block_includes.am
include gr-noaa_includes.am
include gr-pager_includes.am
include gr-trellis_includes.am
include gruel_includes.am
include gr-vocoder_includes.am
include gr-vocoder_codec2_includes.am
include gr-vocoder_g7xx_includes.am
include gr-vocoder_gsm_includes.am
include gr-wavelet_includes.am
include hier_includes.am
include io_includes.am
include runtime_includes.am
include viterbi_includes.am

